--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk: oraclejdk8
 #https://dzone.com/articles/travis-ci-tutorial-java-projects
 cache:
   directories:
-  - $HOME/.m2
+  - $M2_HOME
 
 # https://docs.travis-ci.com/user/database-setup/#PostgreSQL
 before_script:
